--- a/outils/CM_Livret_A5.html
+++ b/outils/CM_Livret_A5.html
@@ -976,7 +976,7 @@
 
 
   <!-- Prompt GPT/Gemini (modal) -->
-  <div id="promptModalBackdrop" class="pm-backdrop" onclick="onPromptBackdropClick(event)">
+  <div id="promptModalBackdrop" class="pm-backdrop">
     <div class="pm" role="dialog" aria-modal="true" aria-labelledby="pmTitle">
       <div class="pm-head">
         <div>
