--- a/outils/sheet_generator_diagramme_partie_tout.html
+++ b/outils/sheet_generator_diagramme_partie_tout.html
@@ -76,6 +76,7 @@
     // Liste des pages à charger (espaces encodés en %20)
     const pages = [
       { id: "splat_tache_barre",   label: "SPLAT! (tache + barre)", sub: "splat_tache_barre.html",   src: "splat_tache_barre.html",   btn: "#ef4444" },
+      { id: "splat_simple",       label: "SPLAT! (simple)",        sub: "splat.html",             src: "splat.html",             btn: "#dc2626" },
       { id: "box_barre_final",     label: "BOX (barre) — final",     sub: "box_barre_final.html",     src: "box_barre_final.html",     btn: "#f97316" },
       { id: "box_pasbarre_final",  label: "BOX (pas barre) — final", sub: "box_pasbarre_final.html",  src: "box_pasbarre_final.html",  btn: "#2563eb" },
       { id: "gabarits_a3_pdf",      label: "Gabarits A3 (PDF)",        sub: "gabarits_enquêtes__1__A3.pdf",    src: "gabarits_enqu%C3%AAtes__1__A3.pdf",    btn: "#10b981" },
