--- a/outils/index.html
+++ b/outils/index.html
@@ -184,9 +184,9 @@ footer {
       <p class="card-desc">Exploration & Jeux</p>
     </a>
 
-    <!-- 4. Diagrammes partie-tout -->
-    <a class="card" href="sheet_generator_diagramme_partie_tout.html" data-color="diagrammes">
-      <div class="card-title">🧩 Diagrammes partie-tout</div>
+    <!-- 4. Schéma partie-tout -->
+    <a class="card" href="sheet_generator_schema_partie_tout.html" data-color="diagrammes">
+      <div class="card-title">🧩 Schéma partie-tout</div>
       <p class="card-desc">Générateur de schémas et de problèmes mathématiques.</p>
     </a>
 
